fix button delete to stretch

--- a/styles.css
+++ b/styles.css
@@ -235,6 +235,8 @@ main > .container > .container {
 }
 
 .delete {
+	display: flex;
+	align-items: stretch;
 	flex: 0;
 }
 
